--- a/Negocio/Negocio/Negocio.csproj
+++ b/Negocio/Negocio/Negocio.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.19" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="8.0.19" />
   </ItemGroup>
 
